<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, MainActivity!</string>
    <string name="app_name">Winamp Remote</string>
    <string name="now_playing_string">Now playing: %s</string>
    <string name="start_title">WARD</string>
    <string name="start_select_server">Select server</string>
    <string name="start_latest">Latest (%s)</string>
    <string name="start_connect_to">Connect to:</string>
    <string name="start_config_servers">Configure servers</string>
    <string name="server_config_title">Configure servers</string>
    <string name="could_not_connect">Could not connect to %s</string>
    <string name="server_config_remove">Remove</string>
    <string name="server_config_add">Add server</string>
    <string name="add_server_dialog_name">Name</string>
    <string name="add_server_dialog_host">Hostname/IP:</string>
    <string name="add_server_dialog_port">Port:</string>
    <string name="add_server_dialog_name_exists">A server with the given name already exists. Please choose a different name.</string>
    <string name="add_server_dialog_invalid_port">Invalid value for port number. Please enter a positive number &lt;= 65535</string>
    <string name="add_server_dialog_enter_name">Please enter a name for the server</string>
    <string name="add_server_dialog_enter_host">Please enter a hostname or an IP address for the server.</string>
    <string name="setting_up_connection">Setting up connection. Please wait...</string>
    <string name="volume_percent">Volume (%d%%):</string>
    <string name="playback_control">Playback control:</string>
    <string name="playlist_title">Current playlist</string>
    <string name="main_menu_playlist">Show playlist</string>
    <string name="retrieving_playlist">Retrieving playlist. Please wait...</string>
    <string name="winamp_not_running">Winamp is not running on the server!</string>
    <string name="playlist_refresh">Refresh</string>
    <string name="add_server_dialog_mac">MAC Address (optional):</string>
    <string name="add_server_dialog_invalid_mac">Invalid MAC address. Write as 00:00:00:00:00:00</string>
    <string name="server_config_wake">Wake up</string>
    <string name="playlist_go_to_current">Go to current song</string>
    <string name="playlist_current">Current</string>
    <string name="main_track_position_format">Time elapsed (%s):</string>
</resources>
