<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center|center_vertical|center_horizontal"
    android:padding="10dp">
    <TextView android:id="@+id/main_track_position_label" android:layout_height="wrap_content" android:layout_width="fill_parent" android:text="@string/main_track_position_format"/>
	<SeekBar android:id="@+id/main_track_position_control" android:layout_height="wrap_content" android:layout_width="fill_parent" android:max="0" android:progress="0" android:clickable="false" android:layout_marginBottom="10dp"></SeekBar>
    <TextView android:text="@string/playback_control" android:layout_height="wrap_content" android:layout_width="fill_parent" />
    <LinearLayout android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10dp" android:layout_marginBottom="10dp">
        <ImageButton android:src="@android:drawable/ic_media_previous" android:id="@+id/mainPreviousButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" />
        <ImageButton android:src="@android:drawable/ic_media_play" android:text="Pl" android:id="@+id/mainPlayButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" />
        <ImageButton android:src="@android:drawable/ic_media_pause" android:text="Pa" android:id="@+id/mainPauseButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" />
        <ImageButton android:src="@android:drawable/ic_media_next" android:text="&gt;" android:id="@+id/mainNextButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" />
    </LinearLayout>
    <TextView android:id="@+id/main_volume_label" android:text="@string/volume_percent" android:layout_height="wrap_content" android:layout_width="fill_parent" />
	<SeekBar android:id="@+id/main_volume_control" android:layout_height="wrap_content" android:layout_width="fill_parent" android:max="255" android:progress="128"></SeekBar>
</LinearLayout>
